update 20/6 auditlog